fix(huron): Input val overlapping, AUTOATTN-1011
Route to user input field value overlaps with the dropdown arrow button and complete name is also
not visoble.
For this

https://jira-eng-chn-sjc1.cisco.com/jira/browse/AUTOATTN-1011

https://jira-eng-chn-sjc1.cisco.com/jira/browse/AUTOATTN-1010

--- a/app/modules/huron/features/autoAttendant/decision/_aa-decision.scss
+++ b/app/modules/huron/features/autoAttendant/decision/_aa-decision.scss
@@ -24,6 +24,14 @@
     }
   }
 
+  .select-list {
+    @include vr-spacing(pr, 1.75);
+    .dropdown-menu {
+        min-width: 100%;
+        width: auto;
+    }
+  }
+
   .aa-decision-textarea {
     line-height: 1.5rem;
     width: 100%;
